# integer-compression

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bench/: Benchmarks.cpp  local.cmake
bench/cases/: Decompression.cpp  DecompressionSpeed.cpp  MicroBenchmarks.cpp
bench/common/: Encodings.hpp
benchmarks/results/pbi/: pbi_results_23042025.tbl  pbi_results_2_22042025.tbl  pbi_results_4_23042025.tbl
benchmarks/scripts/: bench.py
results/compression/pbi/: pbi_results.tbl
results/compression/stackoverflow/: stackoverflow_result.tbl
results/compression/tpch/: tpch_results.tbl
results/microbenchmarks/: MemoryBandwidth.csv  bp_32bit_128.csv  bp_32bit_256.csv  bp_32bit_512.csv  bp_32bit_64.csv  bp_64bit_128.csv  bp_64bit_256.csv  bp_64bit_512.csv  bp_64bit_64.csv
results/microbenchmarks/bitpacking/: 32bitLaneFilter.csv  32bitLaneFilterMask.csv  32bitLaneUnpacking.csv  8bitLaneFilter.csv  8bitLaneFilterMask.csv  8bitLaneUnpacking.csv  BitHackFilter.csv  FilterBig32bit.csv
results/microbenchmarks/decompression_speed/: TinyBlocks128_0_32bitOneValue.csv  TinyBlocks128_0_32bitRandom.csv  TinyBlocks128_1_32bitMonotonic.csv  TinyBlocks128_1_32bitOneValue.csv  TinyBlocks128_1_32bitRandom.csv  TinyBlocks128_2_32bitMonotonic.csv  TinyBlocks128_2_32bitOneValue.csv  TinyBlocks128_2_32bitRandom.csv  TinyBlocks128_3_32bitMonotonic.csv  TinyBlocks128_3_32bitOneValue.csv  TinyBlocks128_3_32bitRandom.csv  TinyBlocks128_5_32bitMonotonic.csv  TinyBlocks128_5_32bitOneValue.csv  TinyBlocks128_5_32bitRandom.csv  TinyBlocks128_6_32bitRandom.csv  TinyBlocks128_7_32bitMonotonic.csv  TinyBlocks128_7_32bitOneValue.csv  TinyBlocks128_7_32bitRandom.csv  TinyBlocks128_9_32bitMonotonic.csv  TinyBlocks128_9_32bitOneValue.csv  TinyBlocks128_9_32bitRandom.csv  TinyBlocks256_0_32bitOneValue.csv  TinyBlocks256_1_32bitMonotonic.csv  TinyBlocks256_1_32bitOneValue.csv  TinyBlocks256_1_32bitRandom.csv  TinyBlocks256_2_32bitMonotonic.csv  TinyBlocks256_2_32bitOneValue.csv  TinyBlocks256_2_32bitRandom.csv  TinyBlocks256_3_32bitMonotonic.csv  TinyBlocks256_3_32bitOneValue.csv  TinyBlocks256_3_32bitRandom.csv  TinyBlocks256_5_32bitMonotonic.csv  TinyBlocks256_5_32bitOneValue.csv  TinyBlocks256_5_32bitRandom.csv  TinyBlocks256_6_32bitRandom.csv  TinyBlocks256_7_32bitMonotonic.csv  TinyBlocks256_7_32bitOneValue.csv  TinyBlocks256_7_32bitRandom.csv  TinyBlocks256_9_32bitMonotonic.csv  TinyBlocks256_9_32bitOneValue.csv  (+45 more)
results/pbi/: pbi_results.tbl  pbi_results_1_22042025.tbl  pbi_results_3_22042025.tbl
results/stackoverflow/: stackoverflow_results_2304.tbl
results/tpch/: tpch_results_17052025.tbl  tpch_results_21042025.tbl
scripts/: bench.py
src/: local.cmake
src/algebra/: Predicate.hpp
src/bitpacking/: BitPacking.cpp  BitPacking.hpp
src/bitpacking/simd32bit/: AVX512BitPacking.cpp  AVX512BitPacking.hpp  AVXBitPacking.cpp  AVXBitPacking.hpp  BitPacking.hpp  Block128BitPacking.cpp  Block128BitPacking.hpp  Block256BitPacking.cpp  Block512BitPacking.cpp  Block512BitPacking.hpp  Block64BitPacking.cpp  Block64BitPacking.hpp  SSEBitPacking.cpp  SSEBitPacking.hpp
src/bitpacking/simd32bit/generators/: block128.py  block256.py  block512.py  block64.py
src/bitpacking/simd64bit/: AVX512BitPacking.cpp  AVX512BitPacking.hpp  AVXBitPacking.cpp  AVXBitPacking.hpp  BitPacking.hpp  Block128BitPacking.cpp  Block128BitPacking.hpp  Block256BitPacking.cpp  Block256BitPacking.hpp  Block512BitPacking.cpp  Block64BitPacking.cpp  Block64BitPacking.hpp  SIMDBitPacking.cpp  SIMDBitPacking.hpp  SSEBitPacking.cpp  SSEBitPacking.hpp
src/bitpacking/simd64bit/generators/: avx512.py  block128.py  block256.py  block64.py
src/bootstrap/: cli.cpp  cli.hpp
src/common/: BitPacking.hpp  PerfEvent.hpp  Types.hpp  Units.hpp  Utils.hpp
src/compression/: Compressor.cpp  Compressor.hpp  Decompressor.cpp  Decompressor.hpp
src/core/: BlockCompressor.hpp  ColumnCompressor.hpp  Compressor.cpp  Compressor.hpp  Decompressor.cpp  Decompressor.hpp
src/schemes/: AdaptiveFORn.cpp  AdaptiveFORn.hpp  BitPacking.hpp  CompressionScheme.hpp  Delta.cpp  Delta.hpp  FOR.cpp  FOR.hpp  FORn.cpp  FORn.hpp  RLE.cpp  RLE.hpp  TinyBlocks.hpp  Truncation.hpp  Uncompressed.cpp  Uncompressed.hpp
src/simd/: delta.hpp
src/statistics/: Statistics.cpp  Statistics.hpp
src/storage/: Column.cpp  Column.hpp
src/tinyblocks/: DataBlock.hpp  Metadata.hpp  TinyBlocks.hpp
src/tinyblocks/schemes/: Delta.hpp  FrameOfReference.hpp  Monotonic.hpp  PatchedFrameOfReference.hpp  RLE.hpp
test/: local.cmake  test.cpp
test/bitpacking/simd32bit/: AVX512BitPacking.cpp  AVXBitPacking.cpp  Block128BitPacking.cpp  Block256BitPacking.cpp  Block512BitPacking.cpp  Block64BitPacking.cpp  SSEBitPacking.cpp
test/schemes/: BitPacking.cpp  Delta.cpp  FOR.cpp  FORn.cpp  RLE.cpp  TinyBlocks.cpp  Truncation.cpp  Trunctation.cpp  Uncompressed.cpp
test/tinyblocks/: DataBlock.cpp  TinyBlocks.cpp
